# glop

./: .gitignore  .travis.yml  Cargo.toml  README.md  USAGE.md  ast.go  ast_test.go  build.rs  doc.go  doc2ast_test.go  doc_test.go  doit.bash  main.rkt  pingpong.glop  pingpong.yaml  syntax.rkt
ast/: ast.go
cmd/glop/: main.go
examples/: pinger.glop  pingmsg.glop  pingpong.glop  pingpong2.glop  pingpong3.glop  ponger.glop  reply.glop  seafile.glop
examples/scripts/: glop-launch.bash
lexer/: lexer.go  lexer_test.go
parser/: parser.go  parser_test.go
src/: agent.rs  ast.rs  cleanup.rs  crypto.rs  error.rs  glop.lalrpop  glop.rs  glop.rustpeg  lib.rs  main.rs  runtime.rs  script.rs  signal_fix.rs  test_grammar.rs  test_runtime.rs  test_script.rs  test_value.rs  tests.rs  value.rs
src/agent/: agent.rs  api.rs  client.rs  mod.rs  server.rs  storage.rs  token.rs
src/runtime/: context.rs  mod.rs  model.rs  script.rs  state.rs  test_runtime.rs  test_script.rs  transaction.rs
token/: token.go
