[package]
name = "glop"
version = "0.1.1"
description = "Glue Language for OPerations"
license = "Apache-2.0"
authors = ["Casey Marshall <glop@cmars.tech>"]
repository = "https://github.com/glop-rs/glop"
build = "build.rs"

[build-dependencies]
peg = { version = "0.4" }

[dependencies]
clap = "2.19.3"
futures = "0.1"
textnonce = "0.4.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-process = "0.1"

