[package]
name = "glop"
version = "0.1.7"
description = "Glue Language for OPerations"
license = "Apache-2.0"
authors = ["Casey Marshall <glop@cmars.tech>"]
repository = "https://github.com/glop-rs/glop"
build = "build.rs"

[build-dependencies]
peg = { version = "0.4" }

[dependencies]
clap = "2.19"
env_logger = "0.4"
fs2 = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
spoolq = "0.1"
textnonce = "0.4.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-process = "0.1"
tokio-signal = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

