[package]
name = "glop"
version = "0.2.5"
description = "Glue Language for OPerations"
license = "Apache-2.0"
authors = ["Casey Marshall <glop@cmars.tech>"]
repository = "https://github.com/glop-rs/glop"

[dependencies]
base64 = "0.4"
bytes = "0.4"
byteorder = "1.0"
clap = "2.19"
env_logger = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
itertools = "0.5"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
sodiumoxide = "0.0.14"
spoolq = "0.2"
textnonce = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-process = "0.1"
tokio-signal = "0.1"
xdg = "^2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

